* 2014-06-04 - tobias.friedrich@open-xchange.com

 - Fix for bug 32745: Propagate result from EDIT action in following SYNC actions

* 2014-06-04 - thorben.betten@open-xchange.com

 - Fix for bug 32899: Let 'Capability' class implement java.io.Serializable marker interface

* 2014-06-04 - martin.schneider@open-xchange.com

 - Fix for bug 32923: Import javax.activation in bundles which use it

* 2014-06-03 - marcus.klein@open-xchange.com

 - Fix for bug 32438: Avoid conflicting library files in different packages.

* 2014-06-03 - jan.bauerdick@open-xchange.com

 - Fix for bug 32809: Workaround to negate boolean false filters for ldap

* 2014-06-03 - tobias.friedrich@open-xchange.com

 - Fix for bug 31072: Ensure first- and lastname are supplied before displayname when inserting/updating records in the database

* 2014-06-03 - martin.schneider@open-xchange.com

 - Fix for bug 32883: Use up to date account information to get folder separator

* 2014-06-02 - jan.bauerdick@open-xchange.com

 - Fix for bug 32874: Removed unsupported "file content" facet

* 2014-06-02 - thorben.betten@open-xchange.com

 - Fix for bug 32555: Keep other Content-Type parameters when fixing Apple Mailer messages
 - Fix for bug 32877: Proper field look-up for "attachment_name" field name

* 2014-05-28 - marc.arens@open-xchange.com

 - Fix for bug 32798:  Use optService and check for availability, log proper error on unavailability
 
* 2014-05-28 - thorben.betten@open-xchange.com

 - Fix for bug 32796: Proper handling of special "*" query during task search
 - Fix for bug 32800: Respect index boundaries when adding SIEVE rules to a java.util.List
 - Fix for bug 32802: Ensure storage instance is initialized during start-up
 - Fix for bug 31539: Orderly signal an error if an identity check is encountered during crawler-based subscription of Google calendar

* 2014-05-28 - martin.schneider@open-xchange.com

 - Fix for bug 32784: Prepare file sizes for error messages to be human readable
