@@ -2335,30 +2335,23 @@ public final class IMAPFolderStorage extends MailFolderStorage implements IMailF
                 }
             }
             // Try NAMESPACE command
-            final char[] sep = new char[1];
-            final String prefixByInferiors = prefixByInferiors(sep);
-            final String prefix;
+            String prefix = null;
             try {
                 final String[] namespaces = NamespaceFoldersCache.getPersonalNamespaces(imapStore, true, session, accountId);
                 if (null == namespaces || 0 == namespaces.length) {
                     // No namespaces available
+                    String prefixByInferiors = prefixByInferiors();
                     LOG.info("IMAP server {} does not provide a personal namespace for login {}. Using fall-back \"by inferiors\" detection: \"{}\" (user={}, context={})", imapConfig.getServer(), imapConfig.getLogin(), prefixByInferiors, session.getUserId(), session.getContextId());
                     return prefixByInferiors;
                 }
                 prefix = namespaces[0];
             } catch (final MessagingException e) {
-                LOG.error("NAMESPACE command failed for any reason", e);
+                String prefixByInferiors = prefixByInferiors();
+                LOG.info("NAMESPACE command failed for any reason on IMAP server {} for login {}. Using fall-back \"by inferiors\" detection: \"{}\" (user={}, context={})", imapConfig.getServer(), imapConfig.getLogin(), prefixByInferiors, session.getUserId(), session.getContextId(), e);
                 return prefixByInferiors;
             }
-            final boolean isEmpty = prefix.length() == 0;
-            if (isEmpty && RootSubfolderCache.canCreateSubfolders((DefaultFolder) imapStore.getDefaultFolder(), true, session, accountId).booleanValue()) {
-                return prefix;
-            }
-            final String retvalPrefix = new StringBuilder(isEmpty ? STR_INBOX : prefix).append(sep[0]).toString();
-            if (!retvalPrefix.equals(prefixByInferiors)) {
-                LOG.info("The personal namespace indicated by NAMESPACE command (\"{}\") does not match to root folder's capability: \"{}\" IS NOT \"{}\"", retvalPrefix, retvalPrefix, prefixByInferiors);
-            }
-            return retvalPrefix;
+            // Return prefix as indicated by NAMESPACE command
+            return prefix.length() == 0 ? prefix : new StringBuilder(prefix).append(((DefaultFolder) imapStore.getDefaultFolder()).getSeparator()).toString();
         } catch (final MessagingException e) {
             throw IMAPException.handleMessagingException(e, imapConfig, session, accountId, null);
         } catch (final RuntimeException e) {
@@ -2366,13 +2359,11 @@ public final class IMAPFolderStorage extends MailFolderStorage implements IMailF
         }
     }
 
-    private String prefixByInferiors(final char[] sep) throws OXException {
+    private String prefixByInferiors() throws OXException {
         try {
             final DefaultFolder defaultFolder = (DefaultFolder) imapStore.getDefaultFolder();
-            final char separator = defaultFolder.getSeparator();
-            sep[0] = separator;
             if (!RootSubfolderCache.canCreateSubfolders(defaultFolder, true, session, accountId).booleanValue() || MailProperties.getInstance().isAllowNestedDefaultFolderOnAltNamespace()) {
-                return new StringBuilder(STR_INBOX).append(separator).toString();
+                return new StringBuilder(STR_INBOX).append(defaultFolder.getSeparator()).toString();
             }
             return "";
         } catch (final MessagingException e) {
